# RAGLens

./: .gitignore  LICENSE  README.md  proposal.md  pyproject.toml
examples/: simple_pipeline.py
examples/langchain_rag/: README.md  real_world_demo.py
raglens/: __init__.py  attribution.py  capture.py  cli.py  datasheet.py  fingerprint.py  insights.py  instrument.py  ir.py  trace.py  wrap.py  writer.py
tests/: test_capture_and_attribution.py  test_fingerprint.py  test_insights.py  test_ir.py  test_pipeline_shapes.py  test_writer_and_datasheet.py
